layout/style/FontFaceSet.h
@@ -136,15 +136,6 @@ public:
     FindOrCreateUserFontEntryFromFontFace(FontFace* aFontFace);
 
   /**
-   * Notification method called by a FontFace once it has been initialized.
-   *
-   * This is needed for the FontFaceSet to handle a FontFace that was created
-   * and inserted into the set immediately, before the event loop has spun and
-   * the FontFace's initialization tasks have run.
-   */
-  void OnFontFaceInitialized(FontFace* aFontFace);
-
-  /**
    * Notification method called by a FontFace to indicate that its loading
    * status has changed.
    */
